<resources>
    <string name="app_name">Video Player</string>
    <string name="all_videos">All Videos</string>
    <string name="all_folders">All Folders</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="feedback">Feedback</string>
    <string name="themes">Themes</string>
    <string name="sort_order">Sort Order</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="welcome_to_world_of_entertainment">Welcome to \nWorld of Entertainment!!</string>
    <string name="image">Image</string>
    <string name="video_name">Video Name</string>
    <string name="folder_name">Folder Name</string>
    <string name="duration">00:00</string>
    <string name="total_videos">Total Videos: 250</string>
    <string name="total_folders">Total Folders: 25</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">Loading</string>
    <string name="semi_colon">:</string>
    <string name="lock">Lock Icon</string>
    <string name="back_btn">Back Button</string>
    <string name="menu">Menu</string>
    <string name="repeat_button">repeat Button</string>
    <string name="previous">Previous</string>
    <string name="next_button">Next Button</string>
    <string name="full_screen">Full Screen</string>
</resources>