<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".fragments.PlayerFragment">

    <com.google.android.exoplayer2.ui.PlayerView
        android:id="@+id/player_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:keepScreenOn="true"
        app:controller_layout_id="@layout/custom_control_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/layout_top_controller"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4.4"
            android:background="#42000000"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:backgroundTint="@android:color/transparent"
                android:contentDescription="@string/back_btn"
                android:src="@drawable/ic_back"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/tv_video_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ellipsize="marquee"
                android:gravity="center"
                android:marqueeRepeatLimit="marquee_forever"
                android:singleLine="true"
                android:text="@string/video_name"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:backgroundTint="@android:color/transparent"
                android:contentDescription="@string/menu"
                android:padding="10dp"
                android:src="@drawable/ic_menu"
                app:tint="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_lock"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:background="#42000000"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_lock"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:backgroundTint="@android:color/transparent"
                android:contentDescription="@string/lock"
                android:src="@drawable/ic_lock_open"
                app:tint="@color/white" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_bottom_controller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#42000000"
        android:gravity="end|bottom"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/btn_repeat"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/repeat_button"
            android:src="@drawable/exo_controls_repeat_off"
            app:tint="@color/white" />

        <ImageButton
            android:id="@+id/btn_prev"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/previous"
            android:src="@drawable/ic_previous"
            app:tint="@color/white" />

        <ImageButton
            android:id="@+id/btn_next"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/next_button"
            android:src="@drawable/ic_next"
            app:tint="@color/white" />

        <ImageButton
            android:id="@+id/btn_fullScreen"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/full_screen"
            android:src="@drawable/exo_controls_fullscreen_enter"
            app:tint="@color/white" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/btn_play_pause"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="?android:selectableItemBackground"
        android:clickable="true"
        android:contentDescription="@string/next_button"
        android:focusable="true"
        android:src="@drawable/ic_play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>