<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:padding="2dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_video"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:contentDescription="@string/image"
        android:scaleType="fitXY"
        android:src="@drawable/ic_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/curved" />

    <TextView
        android:id="@+id/tv_video_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="12dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/video_name"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tv_folder_name"
        app:layout_constraintEnd_toStartOf="@id/tv_duration"
        app:layout_constraintStart_toEndOf="@id/iv_video"
        app:layout_constraintTop_toTopOf="@id/iv_video" />

    <TextView
        android:id="@+id/tv_folder_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="12dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/folder_name"
        android:textColor="@color/grey"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/iv_video"
        app:layout_constraintEnd_toStartOf="@id/tv_duration"
        app:layout_constraintStart_toEndOf="@id/iv_video"
        app:layout_constraintTop_toBottomOf="@id/tv_video_name" />

    <TextView
        android:id="@+id/tv_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="@string/duration"
        android:textColor="@color/grey"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@id/iv_video"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_video" />

</androidx.constraintlayout.widget.ConstraintLayout>